--- a/package.json
+++ b/package.json
@@ -11,13 +11,26 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.6",
+    "@astrojs/solid-js": "^4.0.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.3.4",
     "astro": "^4.4.5",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
+    "classnames": "^2.5.1",
+    "solid-js": "^1.8.15",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.8"
+    "@egoist/tailwindcss-icons": "^1.7.4",
+    "@iconify-json/carbon": "^1.1.30",
+    "@iconify-json/ic": "^1.1.17",
+    "@iconify-json/mdi": "^1.1.64",
+    "@liou666/eslint-config": "^1.4.1",
+    "@liou666/eslint-config-ts": "^1.4.1",
+    "@types/uuid": "^9.0.8",
+    "@vite-pwa/astro": "^0.3.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-astro": "^0.31.4",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
